<resources>
    <string name="app_name">WINNER APP</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_home">Home</string>
    <string name="action_news">News</string>
    <string name="action_messages">Messages</string>
    <string name="action_browse">Browse</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_topic_view"></string>
    <string name="loading">Loading…</string>
    <string name="login_message">Logging in…</string>

    <string name="header_account">Account</string>
    <string name="header_account_summary">Account Settings</string>
    <string name="header_appearance">Appearance</string>
    <string name="header_appearance_summary">Appearance Settings</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_summary">Enter your username</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Enter your password</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summary">Choose your theme</string>
    <string name="pref_banner">Rotating Banner</string>
    <string name="pref_banner_summary">Enable the rotating banner (EXPERIMENTAL)</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>

    <string name="action_reply">Reply</string>
    <string name="action_quote">Quote</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_rate">Rate Post</string>
    <string name="action_preview">Preview</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_share">Share link</string>
    <string name="action_copy">Copy to clipboard</string>
    <string name="action_delete_topic">Delete topic</string>
    <string name="action_delete_post">Delete post</string>
    <string name="action_select">Select All</string>
    <string name="action_deselect">Deselect All</string>
    <string name="action_search">Search</string>
    <string name="action_view_rating">View Ratings</string>
    <string name="action_send_pm">Send PM</string>

    <string name="title_activity_reply_topic">ReplyTopicActivity</string>

    <string name="rate_post">Rate Post</string>

    <string-array name="navigation_items">
        <item>Home</item>
        <item>Messages</item>
        <item>Browse</item>
        <item>Settings</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="tab_titles">
        <item>Recent</item>
        <item>Unread</item>
        <item>Participated</item>
        <item>Subscribed</item>
    </string-array>

    <string-array name="inbox_tab_titles">
        <item>Unread</item>
        <item>Inbox</item>
        <item>Sent</item>
    </string-array>

    <string-array name="themes">
        <item>BROTRR Theme</item>
        <item>Gay Pride Theme</item>
        <item>Stoner Theme</item>
        <item>Dark Theme</item>
        <item>Light Theme</item>
        <item>Roguelike Mode</item>
    </string-array>

    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_edit_post"></string>
    <string name="title_activity_profile_view"></string>
    <string name="title_activity_view_photo">Viewing Photo</string>

    <string name="profile_posts_title">Posts</string>
    <string name="profile_registered_title">Registered</string>
    <string name="profile_group_title">Group</string>
    <string name="profile_email_title">Email</string>
    <string name="profile_age_title">Age</string>
    <string name="profile_ip_title">IP</string>
    <string name="profile_hostname_title">Hostname</string>

    <string name="search_hint">Search</string>

    <string name="hint_subject">Subject</string>
    <string name="hint_body">Body</string>

    <string name="quick_reply">Quick Reply</string>
    <string name="message_to">To:</string>
    <string name="spoiler_reveal">Click here to reveal spoiler</string>
    <string name="server_error">ERROR: yourewinner.com might be down!</string>
    <string name="edit_error">Unable to edit your post!</string>
    <string name="no_topics">No topics!</string>

</resources>
