<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/header_account">

        <EditTextPreference
            android:key="username"
            android:inputType="textEmailAddress"
            android:title="@string/pref_username"
            android:summary="@string/pref_username_summary" />

        <EditTextPreference
            android:key="password"
            android:inputType="textPassword"
            android:title="@string/pref_password"
            android:summary="@string/pref_password_summary"
            android:password="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/header_appearance">
        <ListPreference
            android:key="theme"
            android:title="@string/pref_theme"
            android:summary="@string/pref_theme_summary"
            android:entries="@array/themes"
            android:entryValues="@array/theme_values"
            android:defaultValue="0"/>

    </PreferenceCategory>

</PreferenceScreen>