<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_face"
            android:title="@string/action_profile" />
        <item android:id="@+id/drawer_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/action_messages" />
        <item android:id="@+id/drawer_browse"
            android:icon="@drawable/ic_forum"
            android:title="@string/action_browse" />
        <item android:id="@+id/drawer_news"
            android:icon="@drawable/ic_news"
            android:title="@string/action_news" />
        <item android:id="@+id/drawer_search"
            android:icon="@drawable/ic_search"
            android:title="@string/action_search" />
        <item android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>
</menu>