<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yourewinner.yourewinner.TopicViewActivity">
    <item
        android:id="@+id/action_reply"
        android:title="@string/action_reply"
        android:icon="@drawable/action_reply"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:icon="@drawable/action_rate"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_subscribe"
        android:title="@string/action_subscribe"
        android:icon="@drawable/action_subscribe"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_unsubscribe"
        android:title="@string/action_unsubscribe"
        android:icon="@drawable/action_unsubscribe"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_quote"
        android:title="@string/action_quote"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_deselect_all"
        android:title="@string/action_deselect"
        android:icon="@drawable/action_deselect_all"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>
