<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:icon="@drawable/action_rate"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_rating"
        android:title="@string/action_view_rating"
        android:visible="false"
        android:icon="@drawable/action_view_rating"/>

    <item
        android:id="@+id/action_quote"
        android:title="@string/action_quote"
        android:icon="@drawable/action_quote"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete_post"
        android:title="@string/action_delete_post"
        app:showAsAction="never"
        android:visible="false" />

</menu>