<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ComposePrivateMessageActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:textSize="18sp"
            android:text="@string/message_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/message_to" />

        <EditText
            android:id="@id/message_to"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginLeft="16dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <EditText
        android:id="@+id/message_subject"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/hint_subject"
        android:padding="16dp"
        android:background="@android:color/transparent"/>

    <View style="@style/Divider"/>

    <EditText
        android:id="@+id/message_body"
        android:textSize="18sp"
        android:gravity="top"
        android:hint="@string/hint_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:inputType="textCapSentences|textMultiLine"
        android:background="@android:color/transparent"/>

</LinearLayout>
