<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_scrollview"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="ifContentScrolls" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_avatar"
                android:src="@drawable/no_avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:civ_border_width="2dp"
                app:civ_border_color="?attr/colorAccent"/>
            <TextView
                android:id="@+id/profile_username"
                android:textSize="18sp"
                android:textColor="?attr/color_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_avatar"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/profile_posts_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:text="@string/profile_posts_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/profile_posts"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:text="@string/profile_registered_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/profile_registered"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:text="@string/profile_group_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/profile_group"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_email_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:text="@string/profile_email_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/profile_email"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:text="@string/profile_age_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/profile_age"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_ip_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:text="@string/profile_ip_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/profile_ip"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_hostname_container"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:text="@string/profile_hostname_title"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/profile_hostname"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>